new changes in notebook

--- a/research/Untitled.ipynb
+++ b/research/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,15 @@
     "import numpy as np\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +186,7 @@
        "4             0             0              40           Cuba  <=50K  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +265,146 @@
     "    categorical_convert = LabelEncoder()\n",
     "    X_train[column] = categorical_convert.fit_transform(X_train[column])\n",
     "    encoders[column] = categorical_convert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'age': 36, 'workclass': 'Private', 'fnlwgt': 174789, 'education': 'HS-grad', 'education-num': 9, 'marital-status': 'Married-civ-spouse', 'occupation': 'Craft-repair', 'relationship': 'Husband', 'race': 'White', 'sex': 'Male', 'capital-gain': 0, 'capital-loss': 0, 'hours-per-week': 40, 'native-country': 'United-States'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_mode = dict(X_test.mode().iloc[0])\n",
+    "X_test = X_test.fillna(test_mode)\n",
+    "print(test_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in ['workclass', 'education', 'marital-status',\n",
+    "                'occupation', 'relationship', 'race',\n",
+    "                'sex','native-country']:\n",
+    "    categorical_convert = LabelEncoder()\n",
+    "    X_test[column] = categorical_convert.fit_transform(X_test[column])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestClassifier(n_estimators = 100)\n",
+    "rf = rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = rf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8592486436687481\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(y_test,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6924  493]\n",
+      " [ 882 1470]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "et = ExtraTreesClassifier(n_estimators = 100)\n",
+    "et = et.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = et.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8442010441191524\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(y_test,preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6823  594]\n",
+      " [ 928 1424]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,preds))"
    ]
   },
   {
